# needlr

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  requirements.txt  setup.py
.auto-type/: 001-recording.py  002-recording.py  003-recording.py  004-recording.py  005-recording.py
.github/ISSUE_TEMPLATE/: bug_report.md  how-do-i---.md
.github/workflows/: package-build.yml
docs/: DESIGN.md  README.md  conf.py  index.rst  modules.rst  needlr.auth.rst  needlr.rst
docs/source/: conf.py  index.rst  modules.rst  needlr.auth.rst  needlr.core.capacity.rst  needlr.core.item.rst  needlr.core.rst  needlr.core.workspace.rst  needlr.dataactivator.reflex.rst  needlr.dataactivator.rst  needlr.dataengineering.rst  needlr.datafactory.rst  needlr.datascience.rst  needlr.datawarehouse.rst  needlr.industrysolutions.rst  needlr.models.rst  needlr.powerbi.rst  needlr.realtimeintelligence.rst  needlr.rst  needlr.utils.rst
needler.egg-info/: PKG-INFO  SOURCES.txt
needlr/: README.md  __init__.py  _http.py  client.py  pyproject.toml
needlr.egg-info/: PKG-INFO
needlr/admin/: domain.py  label.py  user.py
needlr/admin/item/: __init__.py
needlr/admin/workspace/: __init__.py  adminworkspace.py
needlr/auth/: auth.py  scopes.py
needlr/core/: onelake_shortcuts.py
needlr/core/gateway/: __init__.py  gateway.py
needlr/core/git/: git.py
needlr/core/item/: __init__.py  item.py
needlr/core/jobscheduler/: jobscheduler.py
needlr/core/workspace/: __init__.py  role.py  workspace.py
needlr/dataactivator/reflex/: reflex.py
needlr/dataengineering/: lakehouse.py  notebook.py
needlr/dataengineering/environment/: environment.py
needlr/dataengineering/notebook/: notebook.py
needlr/datafactory/: datapipeline.py
needlr/datascience/: mlexperiment.py  mlmodel.py
needlr/datawarehouse/: warehouse.py
needlr/models/: adminworkspace.py  capacity.py  domain.py  environment.py  gateway.py  git.py  item.py  jobscheduler.py  notebook.py  onelakeshortcut.py  semanticmodel.py  sparkjobdefinition.py  warehouse.py  workspace.py
needlr/powerbi/: paginatedreport.py  report.py  semanticmodel.py
needlr/realtimeintelligence/: eventhouse.py  kqldashboard.py
samples/: README.md  datascienceproject.py  labcorp.py  list_workspaces.py  project.csv  sandbox.py  workspace_list.py  workspaces_list.py
tests/: conftest.py  test_sample.py
tests/admin/: test_adminworkspace.py  test_domain.py  test_label.py  test_tenant.py  test_user.py
tests/core/: conftest.py  test_capacity.py  test_onelakeshortcut.py  test_workspace.py  test_workspace_git.py  test_workspace_identity.py  test_workspace_job_scheduler.py  test_workspace_role.py
tests/dataactivator/: conftest.py  test_reflex.py
tests/dataengineering/: conftest.py  notebook_test_part0.txt  notebook_test_part1.txt  test_lakehouse.py  test_notebook.py  test_sqlendpoint.py
tests/datafactory/: conftest.py  datapipeline_definition.pkl  test_datapipeline.py
tests/datascience/: conftest.py  test_mlexperiment.py  test_mlmodel.py
tests/datawarehouse/: conftest.py  test_mirroredwarehouse.py  test_warehouse.py
tests/powerbi/: conftest.py  report_definition.pkl  semantic_model_definition.pkl  test_dashboard.py  test_datamart.py  test_paginatedreport.py  test_report.py  test_semanticmodel.py
tests/realtimeintelligence/: conftest.py  test_eventhouse.py  test_eventstream.py  test_kldatabase.py  test_kqldashboard.py
(+3 files in other folders)
